k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threadservice
  labels:
    app: threadservice
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: web
  template:
    metadata: 
      labels:
        component: web
    spec:
      containers:
        - name: cthreadservice
          image: threadservice
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
