k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-threads
spec:
  type: NodePort
  selector:
    component: web
  ports:
    - port: 9999
      targetPort: 8080
