k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: threadservice-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /thread(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-threads
                port:
                  number: 9999
